--- a/plugin.xml
+++ b/plugin.xml
@@ -1,47 +1,24 @@
 <?xml version='1.0' encoding='utf-8'?>
-<!--
-The MIT License (MIT)
-
-Copyright (c) 2013-2015 Jean-Christophe Hoelt
-
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE.
--->
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    id="cordova-plugin-abdias"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    id="cordova-plugin-abdias"
     version="1.0.0">
 
-  <name>Abdias</name>
+    <name>Abdias</name>
 	<description>Plugin to add implementations in android build.gradle</description>
-  <author>Abdias N Vrech</author>
+    <author>Abdias N Vrech</author>
 
-  <js-module name="Abdias" src="www/Plugin.js">
-    <clobbers target="cordova.plugins.Abdias" />
-  </js-module>
+    <js-module name="Abdias" src="www/Plugin.js">
+        <clobbers target="cordova.plugins.Abdias" />
+    </js-module>
+    
+    <engines>
+      <engine name="cordova" version=">=8.0.0" />
+        <engine name="cordova-android" version="<9.0.0" />
+    </engines>
 
-  <engines>
-      <engine name="cordova" version=">=6.0.0" />
-      <engine name="cordova-android" version=">=4.0.0" />
-  </engines>
-
-  <license>MIT</license>
-  <keywords>cordova,phonegap,purchase,purchases,storekit,billing,ios,android,play</keywords>
+    <license>MIT</license>
+    <keywords>cordova,phonegap,purchase,purchases,storekit,billing,ios,android,play</keywords>
 
     <!-- android -->
     <platform name="android">
