--- a/plugin.xml
+++ b/plugin.xml
@@ -11,10 +11,10 @@
     <js-module name="Abdias" src="www/Plugin.js">
         <clobbers target="cordova.plugins.Abdias" />
     </js-module>
-    
+
     <engines>
-      <engine name="cordova" version=">=8.0.0" />
-        <engine name="cordova-android" version="<9.0.0" />
+        <engine name="cordova" version=">=6.0.0" />
+        <engine name="cordova-android" version=">=4.0.0" />
     </engines>
 
     <license>MIT</license>
